# IOMS

./: .dockerignore  .gitattributes  .gitignore  DEMO_AND_DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  render.yaml  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: customers.py  dashboard.py  orders.py  products.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: database.py
backend/app/models/: customer.py  order.py  order_item.py  product.py
backend/app/schemas/: customer.py  order.py  product.py
backend/app/services/: customer_service.py  dashboard_service.py  order_service.py  product_service.py
backend/tests/: conftest.py  test_customers.py  test_orders.py  test_products.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js  customers.js  dashboard.js  orders.js  products.js
frontend/src/components/: ErrorBoundary.jsx
frontend/src/components/layout/: AppLayout.jsx  Header.jsx  Sidebar.jsx
frontend/src/hooks/: useCustomers.js  useDashboard.js  useOrders.js  useProducts.js  useToast.js
frontend/src/lib/: utils.js
frontend/src/pages/: CustomersPage.jsx  DashboardPage.jsx  NotFoundPage.jsx  OrdersPage.jsx  ProductsPage.jsx
(+14 files in other folders)
