# Generic single-file configuration for ruff.
# See: https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
